--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "An unofficial extension for the 'discord.js' library focused on making your discord bot's code easier to read and write.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node testbot.js"
   },
   "private": true,
   "dependencies": {
